# sourcegraph--src-cli

./: .goreleaser-patch.yml  .goreleaser.yml  .tool-versions  BUILD.bazel  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  README.md  WORKSPACE  go.mod
.github/workflows/: docker.yml  go-ci.yml  go-lint.yml  goreleaser-check.yml  goreleaser.yml  lsif.yml  pr-auditor.yml
cmd/src/: BUILD.bazel  admin_create.go  api.go  batch_apply.go  batch_common.go  batch_exec.go  batch_new.go  batch_preview.go  batch_remote.go  batch_repositories.go  batch_validate.go  cmd.go  code_intel_upload.go  code_intel_upload_flags.go  codeowners_create.go  codeowners_delete.go  codeowners_get.go  codeowners_update.go  config.go  config_edit.go  config_get.go  config_list.go  debug_common.go  debug_kube.go  doc.go  extensions_copy.go  extensions_delete.go  extensions_get.go  extensions_list.go  extensions_publish.go  extsvc.go  extsvc_create.go  extsvc_edit.go  extsvc_list.go  login.go  login_test.go  main.go  orgs_create.go  orgs_delete.go  orgs_get.go  (+38 more)
docker/batch-change-volume-workspace/: Dockerfile  README.md
internal/api/: BUILD.bazel  api.go
internal/batches/: BUILD.bazel  errors.go
internal/cmderrors/: BUILD.bazel
internal/codeintel/: BUILD.bazel  gitutil.go  gitutil_test.go
internal/exec/: BUILD.bazel
internal/instancehealth/: BUILD.bazel  summary.go
internal/lazyregexp/: BUILD.bazel
internal/pgdump/: BUILD.bazel
internal/servegit/: BUILD.bazel
internal/streaming/: BUILD.bazel  search.go
internal/users/: BUILD.bazel  admin.go
npm-distribution/: install.js  package.json
(+75 files in other folders)
