load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmderrors",
    srcs = ["errors.go"],
    importpath = "github.com/pkgs-run/sourcegraph--src-cli/internal/cmderrors",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_sourcegraph_sourcegraph_lib//errors"],
)
